Avance en el menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cifrados Cristianos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,15 +17,69 @@
 
 <body>
     <header class="navbar">
-        <a href="">
-            <span class="material-icons">
-                list
-            </span>
-        </a>
+        <div class="icono-menu">
+            <span class="material-icons" id="icono-menu">list</span>
+        </div>
 
-        <a href="index.html" class="logo">
-            Cifrados Cristianos
-        </a>
+        <div class="content-menu active" id="menu">
+            <div class="widget">
+                <ul>
+                    <li><a href="#">Abel Zabala</a></li>
+                    <li><a href="#">Alex Campos</a></li>
+                    <li><a href="#">Alex Rodriguez</a></li>
+                    <li><a href="#">Alex Zurdo</a></li>
+                    <li><a href="#">Alvaro Lopez</a></li>
+                    <li><a href="#">Art Aguilera</a></li>
+                    <li><a href="#">Chris Tomlin</a></li>
+                    <li><a href="#">Chirstine D'Clairo</a></li>
+                    <li><a href="#">Coalo Zamorano</a></li>
+                    <li><a href="#">Daniel Calveti</a></li>
+                    <li><a href="#">Danilo Montero</a></li>
+                    <li><a href="#">Don Moen</a></li>
+                    <li><a href="#">Ebenezer</a></li>
+                    <li><a href="#">Evan Craft</a></li>
+                    <li><a href="#">Generación 12</a></li>
+                    <li><a href="#">Hillsong</a></li>
+                    <li><a href="#">Ingrid Rosario</a></li>
+                    <li><a href="#">Jesus Adrián Romero</a></li>
+                    <li><a href="#">Jesus Culture</a></li>
+                    <li><a href="#">Job Gonzales</a></li>
+                    <li><a href="#">Juan Carlos Alvarado</a></li>
+                    <li><a href="#">Julio Melgar</a></li>
+                    <li><a href="#">LakeWood</a></li>
+                    <li><a href="#">Life Worship</a></li>
+                    <li><a href="#">Marcela Gandara</a></li>
+                    <li><a href="#">Marco Barrientos</a></li>
+                    <li><a href="#">Marco Witt</a></li>
+                    <li><a href="#">Miel San Marcos</a></li>
+                    <li><a href="#">New Wine</a></li>
+                    <li><a href="#">Hillsong</a></li>
+                    <li><a href="#">Ingrid Rosario</a></li>
+                    <li><a href="#">Jesus Adrián Romero</a></li>
+                    <li><a href="#">Jesus Culture</a></li>
+                    <li><a href="#">Job Gonzales</a></li>
+                    <li><a href="#">Juan Carlos Alvarado</a></li>
+                    <li><a href="#">Julio Melgar</a></li>
+                    <li><a href="#">LakeWood</a></li>
+                    <li><a href="#">Life Worship</a></li>
+                    <li><a href="#">Marcela Gandara</a></li>
+                    <li><a href="#">Marco Barrientos</a></li>
+                    <li><a href="#">Marco Witt</a></li>
+                    <li><a href="#">Miel San Marcos</a></li>
+                    <li><a href="#">New Wine</a></li>
+                </ul>
+
+            </div>
+            
+
+        </div>
+        <div class="logo">
+            <a href="index.html">
+                Cifrados Cristianos
+            </a>
+
+        </div>
+
 
     </header>
     <main>
@@ -82,13 +136,15 @@
             <p> también podrás donar y contactarte con nuestros <a href=""> nuestros colaboradores</a></p>
 
         </section>
-        
+
     </main>
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://angelrevolledo.com">Angel Revolledo</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="https://angelrevolledo.com">Angel Revolledo</a> | <span
+                class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
+    <script src="/app.js"></script>
 </body>
 
 </html>
