se maqueta el breadcrumb

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    
     <header class="navbar">
         <div class="icono-menu">
             <span class="material-icons" id="icono-menu">list</span>
@@ -34,7 +36,7 @@
                     <li><a href="#">Chirstine D'Clairo</a></li>
                     <li><a href="#">Coalo Zamorano</a></li>
                     <li><a href="#">Daniel Calveti</a></li>
-                    <li><a href="#">Danilo Montero</a></li>
+                    <li><a href="/pages/danilo.html">Danilo Montero</a></li>
                     <li><a href="#">Don Moen</a></li>
                     <li><a href="#">Ebenezer</a></li>
                     <li><a href="#">Evan Craft</a></li>
